EHN: cmake fix, packaging working

--- a/OpenIGTLinkIF/CMakeLists.txt
+++ b/OpenIGTLinkIF/CMakeLists.txt
@@ -66,6 +66,7 @@ set(MODULE_TARGET_LIBRARIES
   vtkSlicerOpenIGTLinkIFModuleLogic
   vtkSlicerOpenIGTLinkIFModuleMRML
   qSlicerOpenIGTLinkIFModuleWidgets
+  ${MRML_LIBRARIES}
   )
 
 set(MODULE_RESOURCES
