cmake: Simplify and cleanup buildsystem
* Follow usual patterns for Slicer superbuild extension. A nice report
  listing dependencies is now displayed at configuration time. See below.

  We basically rely on "ExternalProject_Include_Dependencies" to recursively
  include all dependent external projects instead of explicitly including
  them at the top of SuperBuild.cmake

* Rename External_yasm to External_YASM so that naming is consistent
  with FindYASM module.

* Remove redundant parameters from CMAKE_CACHE_ARGS

* VP9: Simplify selection of binary package to download

Dependency report:

[...]
-- SuperBuild - First pass
-- SuperBuild - First pass - done
-- SuperBuild - inner => Requires OpenIGTLinkIO,
-- SuperBuild -   OpenIGTLinkIO => Requires OpenIGTLink,
-- SuperBuild -     OpenIGTLink => Requires VP9,
-- SuperBuild -       VP9 => Requires YASM,
-- SuperBuild -         YASM[OK]
-- SuperBuild -         YASM_DIR:/tmp/SlicerOpenIGTLink-build/YASM-bin
-- SuperBuild -       VP9[OK]
-- SuperBuild -       VP9_INCLUDE_DIR:/tmp/SlicerOpenIGTLink-build/VP9/vpx
-- SuperBuild -       VP9_LIBRARY_DIR:/tmp/SlicerOpenIGTLink-build/VP9/VP9
-- SuperBuild -       VP9_LIBRARY:/tmp/SlicerOpenIGTLink-build/VP9/VP9/libvpx.a
-- SuperBuild -     OpenIGTLink[OK]
-- SuperBuild -     OpenIGTLink_DIR:/tmp/SlicerOpenIGTLink-build/OpenIGTLink-build
-- SuperBuild -   OpenIGTLinkIO[OK]
-- SuperBuild -   OpenIGTLinkIO_DIR:/tmp/SlicerOpenIGTLink-build/OpenIGTLinkIO-build
-- SuperBuild - inner[OK]
-- Configuring done
-- Generating done
-- Build files have been written to: /tmp/SlicerOpenIGTLink-build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,23 +12,25 @@ set(EXTENSION_ICONURL "https://raw.githubusercontent.com/openigtlink/SlicerOpenI
 set(EXTENSION_SCREENSHOTURLS "https://raw.githubusercontent.com/openigtlink/SlicerOpenIGTLink/master/Screenshots/Overview.png")
 set(EXTENSION_DEPENDS "")
 set(EXTENSION_BUILD_SUBDIRECTORY inner-build)
-#-----------------------------------------------------------------------------
 
 set(SUPERBUILD_TOPLEVEL_PROJECT inner)
 
+#-----------------------------------------------------------------------------
 # Extension dependencies
 find_package(Slicer REQUIRED)
 include(${Slicer_USE_FILE})
 mark_as_superbuild(Slicer_DIR)
 
-option(Slicer_USE_VP9 "Build SlicerOpenIGTLink with VP9 support" ON)
-INCLUDE(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
+#-----------------------------------------------------------------------------
+# Options
+option(SlicerOpenIGTLink_USE_VP9 "Build SlicerOpenIGTLink with VP9 support" ON)
+mark_as_superbuild(SlicerOpenIGTLink_USE_VP9)
 
 #-----------------------------------------------------------------------------
 # SuperBuild setup
-option(SlicerOpenIGTLink_SUPERBUILD "Build OpenIGTLink related modules and the projects it depends on." ON)
-mark_as_advanced(SlicerOpenIGTLink_SUPERBUILD)
-if(SlicerOpenIGTLink_SUPERBUILD)
+option(${EXTENSION_NAME}_SUPERBUILD "Build ${EXTENSION_NAME} and the projects it depends on." ON)
+mark_as_advanced(${EXTENSION_NAME}_SUPERBUILD)
+if(${EXTENSION_NAME}_SUPERBUILD)
   include("${CMAKE_CURRENT_SOURCE_DIR}/SuperBuild.cmake")
   return()
 endif()
@@ -39,7 +41,6 @@ add_subdirectory(OpenIGTLinkIF)
 ## NEXT_MODULE
 
 #-----------------------------------------------------------------------------
-
 # Generate SlicerOpenIGTLinkConfig.cmake file
 # Add OpenIGTLink and OpenIGTLinkIO targets to SlicerOpenIGTLinkConfig.cmake file
 set(SlicerOpenIGTLink_CUSTOM_CONFIG "
@@ -48,9 +49,11 @@ include(\"${OpenIGTLinkIO_DIR}/OpenIGTLinkIOConfig.cmake\")
 ")
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
 
+#-----------------------------------------------------------------------------
+# Packaging
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${CMAKE_BINARY_DIR};${EXTENSION_NAME};ALL;/")
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${OpenIGTLink_DIR};OpenIGTLink;RuntimeLibraries;/")
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${OpenIGTLinkIO_DIR};OpenIGTLinkIO;RuntimeLibraries;/")
 include(${CMAKE_CURRENT_SOURCE_DIR}/CMake/SlicerBlockInstallVP9.cmake)
-MESSAGE(STATUS "CPACK_INSTALL_CMAKE_PROJECTS = ${CPACK_INSTALL_CMAKE_PROJECTS}")
+message(STATUS "CPACK_INSTALL_CMAKE_PROJECTS = ${CPACK_INSTALL_CMAKE_PROJECTS}")
 include(${Slicer_EXTENSION_CPACK})
