STYLE: Convert CMake-language commands to lower case
Ancient CMake versions required upper-case commands. Later
command names became case-insensitive. Now the preferred style
is lower-case

See https://github.com/jcfr/cmake-auto-style/blob/master/docs/cmake-commands-to-lower-case.md#cmake-commands-to-lower-case

--- a/OpenIGTLinkIF/CMakeLists.txt
+++ b/OpenIGTLinkIF/CMakeLists.txt
@@ -15,9 +15,9 @@ include(${Slicer_USE_FILE})
 
 #-----------------------------------------------------------------------------
 # OpenIGTlinkIF version number.
-SET(OpenIGTLinkIF_VERSION_MAJOR "2")
-SET(OpenIGTLinkIF_VERSION_MINOR "0")
-SET(OpenIGTLinkIF_VERSION_PATCH "0")
+set(OpenIGTLinkIF_VERSION_MAJOR "2")
+set(OpenIGTLinkIF_VERSION_MINOR "0")
+set(OpenIGTLinkIF_VERSION_PATCH "0")
 
 # --------------------------------------------------------------------------
 # Check if version 2 protocol is available
