--- a/OpenIGTLinkIF/Converter/CMakeLists.txt
+++ b/OpenIGTLinkIF/Converter/CMakeLists.txt
@@ -5,10 +5,10 @@ set(KIT "${PROJECT_NAME}")
 set(${KIT}_EXPORT_DIRECTIVE "Q_SLICER_QTMODULES_OPENIGTLINKIF_CONVERTER_EXPORT")
 
 if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
-  ADD_DEFINITIONS(-DOpenIGTLinkIF_USE_VERSION_2)
-  ADD_DEFINITIONS(-DOpenIGTLinkIF_LIBRARY_VERSION="${OpenIGTLink_VERSION_MAJOR}-${OpenIGTLink_VERSION_MINOR}-${OpenIGTLink_VERSION_PATCH} for protocol ver. 2")
+  add_definitions(-DOpenIGTLinkIF_USE_VERSION_2)
+  add_definitions(-DOpenIGTLinkIF_LIBRARY_VERSION="${OpenIGTLink_VERSION_MAJOR}-${OpenIGTLink_VERSION_MINOR}-${OpenIGTLink_VERSION_PATCH} for protocol ver. 2")
 else()
-  ADD_DEFINITIONS(-DOpenIGTLinkIF_LIBRARY_VERSION="${OpenIGTLink_VERSION_MAJOR}-${OpenIGTLink_VERSION_MINOR}-${OpenIGTLink_VERSION_PATCH} for protocol ver. 1")
+  add_definitions(-DOpenIGTLinkIF_LIBRARY_VERSION="${OpenIGTLink_VERSION_MAJOR}-${OpenIGTLink_VERSION_MINOR}-${OpenIGTLink_VERSION_PATCH} for protocol ver. 1")
 endif()
 
 
