--- a/OpenIGTLinkIF/MRML/CMakeLists.txt
+++ b/OpenIGTLinkIF/MRML/CMakeLists.txt
@@ -8,6 +8,7 @@ set(${KIT}_INCLUDE_DIRECTORIES
   ${CMAKE_CURRENT_SOURCE_DIR}/../Logic
   ${CMAKE_CURRENT_BINARY_DIR}/../Logic
   ${OpenIGTLinkIO_INCLUDE_DIRS}
+  ${vtkSlicerOpenIGTLinkIFModuleCommand_INCLUDE_DIRS}
   )
 
 set(${KIT}_SRCS
@@ -40,6 +41,7 @@ set(${KIT}_TARGET_LIBRARIES
   SlicerBaseLogic
   vtkSlicerAnnotationsModuleMRML
   vtkSlicerMarkupsModuleMRML
+  vtkSlicerOpenIGTLinkIFModuleCommand
   )
 
 #-----------------------------------------------------------------------------
