EHN: 1.First test for command sending and receiving added. 2. Warning fixed regarding the issue #12

--- a/OpenIGTLinkIF/MRML/CMakeLists.txt
+++ b/OpenIGTLinkIF/MRML/CMakeLists.txt
@@ -27,9 +27,9 @@ if(OpenIGTLink_PROTOCOL_VERSION GREATER 1)
     )
 endif()
 
-if(OpenIGTLink_ENABLE_VIDEOSTREAMING)
+if(Slicer_USE_VP9)
   list(APPEND ${KIT}_SRCS
-  vtkMRMLBitStreamNode.cxx
+    vtkMRMLBitStreamNode.cxx
   )
 endif()
 
