ENH: Update command handling and Migrate OpenIGTLinkRemote and PlusRemote from SlicerIGT
- On command response received, invoke with corresponding vtkSlicerOpenIGTLinkIFCommand if found, otherwise, invoke with device
- Remove need for Name and Status elements in command response, now the only requirement is that the string is an XML
- All methods that send or receive commands either create or use a vtkSlicerOpenIGTLinkIFCommand

re #24

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ endif()
 #-----------------------------------------------------------------------------
 # Extension modules
 add_subdirectory(OpenIGTLinkIF)
+add_subdirectory(OpenIGTLinkRemote)
+add_subdirectory(PlusRemote)
 ## NEXT_MODULE
 
 #-----------------------------------------------------------------------------
