--- a/PlusRemote/CMakeLists.txt
+++ b/PlusRemote/CMakeLists.txt
@@ -28,7 +28,7 @@ if(BUILD_TESTING)
 
   # Register the unittest subclass in the main script as a ctest.
   # Note that the test will also be available at runtime.
-  slicer_add_python_unittest(SCRIPT ${MODULE_NAME}.py)
+  #slicer_add_python_unittest(SCRIPT ${MODULE_NAME}ModuleTest.py)
 
   # Additional build-time testing
   add_subdirectory(Testing)
