ENH: Add widget for controlling PlusServerLauncher remotely

--- a/PlusRemote/CMakeLists.txt
+++ b/PlusRemote/CMakeLists.txt
@@ -1,5 +1,6 @@
 #-----------------------------------------------------------------------------
 set(MODULE_NAME PlusRemote)
+string(TOUPPER ${MODULE_NAME} MODULE_NAME_UPPER)
 
 #-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
@@ -14,6 +15,9 @@ set(MODULE_PYTHON_RESOURCES
   Resources/Icons/VisibleOff.png
   Resources/Icons/VisibleOn.png
   )
+
+add_subdirectory(MRML)
+add_subdirectory(Widgets)
 
 #-----------------------------------------------------------------------------
 slicerMacroBuildScriptedModule(
